kube/deploy/apps/continuwuity/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app continuwuity
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - icmps: [{}]
    - fromEndpoints:
        - matchLabels:
            egress.home.arpa/continuwuity: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - {}
          terminatingTLS:
            secret:
              name: long-domain-tls
              namespace: *app
          # originatingTLS:
          #   secret:
          #     name: public-ca
          #     namespace: *app
